msm: kgsl: Fix direct references to HZ
Make the various timeout values HZ agnostic by using the proper
macros and values instead.

 Conflicts:
	Documentation/devicetree/bindings/gpu/adreno.txt
	arch/arm/boot/dts/qcom/msm8992-gpu.dtsi
	arch/arm/boot/dts/qcom/msm8994-gpu.dtsi
	drivers/gpu/msm/adreno_dispatch.c
	drivers/gpu/msm/adreno_profile.c
	drivers/gpu/msm/kgsl_pwrctrl.c

Change-Id: I906b948657c8873518042c7465272c98c5391e59
Signed-off-by: Suman Tatiraju <sumant@codeaurora.org>
Signed-off-by: Ajay Dudani <adudani@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8916-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916-gpu.dtsi
@@ -32,8 +32,8 @@
 
 		qcom,initial-pwrlevel = <2>;
 
-		/* Idle Timeout = HZ/12 */
-		qcom,idle-timeout = <8>;
+		/* Idle Timeout */
+		qcom,idle-timeout = <80>;
 		qcom,strtstp-sleepwake;
 
 		/*
