arm: configs: set CONFIG_HZ to 300
Bug: 26444620

Change-Id: Idebc12682281e33e8f41e338482132cb881b9e85
Signed-off-by: Patrick Tjin <pattjin@google.com>

Conflicts:
	arch/arm/configs/lux_defconfig
	arch/arm/configs/merlin_defconfig
	arch/arm/configs/osprey_defconfig

--- a/arch/arm/configs/wt88047-perf_defconfig
+++ b/arch/arm/configs/wt88047-perf_defconfig
@@ -574,6 +574,12 @@ CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_DEFAULT_SIO=y
 
+# CONFIG_HZ_100 is not set
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=300
+
 CONFIG_LOCALVERSION="-Jerrica-MM-PreFinal_4.1"
 CONFIG_INPUT_LTR559=y
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
