update defconfig zram/zsmalloc
Conflicts:
	arch/arm/configs/wt88047_kernel_defconfig

Conflicts:
	arch/arm/configs/wt88047_kernel_defconfig

--- a/arch/arm/configs/wt88047_kernel_defconfig
+++ b/arch/arm/configs/wt88047_kernel_defconfig
@@ -3058,6 +3058,7 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
@@ -3754,6 +3755,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
