--- a/arch/arm/configs/wt88047-perf_defconfig
+++ b/arch/arm/configs/wt88047-perf_defconfig
@@ -28,14 +28,14 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
-CONFIG_OPROFILE=m
+# CONFIG_OPROFILE is not set
 CONFIG_KPROBES=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODULES is not set
+# CONFIG_MODULE_UNLOAD is not set
+# CONFIG_MODULE_FORCE_UNLOAD is not set
+# CONFIG_MODVERSIONS is not set
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
@@ -50,7 +50,7 @@ CONFIG_FORCE_INSTRUCTION_ALIGNMENT=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=4
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -219,7 +219,7 @@ CONFIG_BT_HIDP=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
-CONFIG_NFC_QNCI=y
+# CONFIG_NFC_QNCI is not set
 # CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
@@ -227,7 +227,7 @@ CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
-CONFIG_APDS9930=y
+# CONFIG_APDS9930 is not set
 CONFIG_QSEECOM=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
@@ -266,20 +266,21 @@ CONFIG_WCNSS_CORE_PRONTO=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_H2X=y
+CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_H2X=n
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_HBTP_INPUT=y
+# CONFIG_INPUT_HBTP_INPUT is not set
 CONFIG_SENSORS_MPU6050=y
-CONFIG_SENSORS_LIS3DH=y
+# CONFIG_SENSORS_LIS3DH is not set
 CONFIG_INPUT_UINPUT=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 CONFIG_SENSORS_MMC3416X=y
 CONFIG_SENSORS_AKM09911=y
 CONFIG_SENSORS_AKM8963=y
@@ -300,7 +301,7 @@ CONFIG_HAS_DMA=y
 CONFIG_QCOM_SPS_DMA=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
+# CONFIG_SPI_SPIDEV is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
@@ -311,14 +312,14 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_SMB135X_CHARGER=n
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BQ2022A_SUPPORT=y
-CONFIG_WT_USE_XIAOMI_CHARGE_1050=y
+# CONFIG_WT_USE_XIAOMI_CHARGE_1050 is not set
 CONFIG_SMB358_CHARGER=n
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_VM_BMS=n
 CONFIG_QPNP_LINEAR_CHARGER=n
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
-CONFIG_MSM_DLOAD_MODE=y
+# CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_SENSORS_QPNP_CURRENT_MONITOR=y
@@ -360,7 +361,7 @@ CONFIG_OV5645=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_FB=y
@@ -420,8 +421,8 @@ CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+# CONFIG_MMC_TEST is not set
+# CONFIG_MMC_BLOCK_TEST is not set
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -441,7 +442,7 @@ CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
@@ -456,22 +457,22 @@ CONFIG_QPNP_VIBRATOR=y
 CONFIG_QPNP_REVID=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=m
+# CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
-CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
+# CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING is not set
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
+# CONFIG_MOBICORE_SUPPORT is not set
+# CONFIG_MOBICORE_API is not set
 CONFIG_SENSORS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_SMD=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
@@ -489,6 +490,7 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -513,13 +515,13 @@ CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
-CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_MEMORY_INIT=y
+CONFIG_DEBUG_INFO=n
+# CONFIG_DEBUG_MEMORY_INIT is not set
 CONFIG_IPC_LOGGING=y
 # CONFIG_FTRACE is not set
-CONFIG_DYNAMIC_DEBUG=y
-CONFIG_DEBUG_USER=y
-CONFIG_DEBUG_SET_MODULE_RONX=y
+# CONFIG_DYNAMIC_DEBUG is not set
+# CONFIG_DEBUG_USER is not set
+# CONFIG_DEBUG_SET_MODULE_RONX is not set
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
@@ -550,6 +552,27 @@ CONFIG_QCOM_TDLS=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
+
+# CONFIG_SLUB_DEBUG is not set
+# CONFIG_IOSCHED_TEST is not set
+# CONFIG_MSM_DMA_TEST is not set
+CONFIG_MSM_PRESERVE_MEM=y
+CONFIG_WCD9330_CODEC=y
+CONFIG_RADIO_IRIS_TRANSPORT_NO_FIRMWARE=y
+CONFIG_MSDOS_FS=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V2=y
+CONFIG_NFS_V3=y
+CONFIG_CRYPTO_CRYPTD=y
+CONFIG_CRYPTO_ANSI_CPRNG=y
+CONFIG_DEFAULT_SIO=y
 
 CONFIG_LOCALVERSION="-Jerrica-MM-PreFinal_4.1"
 CONFIG_INPUT_LTR559=y
